# fosite

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  README  README.md  Toolchain-SX-Aurora.cmake  fosite.f90
boundary/: CMakeLists.txt  Makefile.am  boundary_absorbing.f90  boundary_axis.f90  boundary_base.f90  boundary_custom.f90  boundary_farfield.f90  boundary_fixed.f90  boundary_generic.f90  boundary_inner.f90  boundary_nogradients.f90  boundary_noslip.f90  boundary_periodic.f90  boundary_reflecting.f90  boundary_shearing.f90
common/: CMakeLists.txt  Makefile.am  array.f90  common_dict.f90  constants_common.f90  dict_common.f90  field_base.f90  logging_base.f90  tap.f90  tap.h
doc/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  adjust_names.sh  advanced_custom.dox  coding_guidelines.dox  first_setup.dox  installation.dox  mainpage.dox  plotting.dox  references.bib  references.bib.in  test_suite.dox  todo
doc/html/: about.html  agndisk.html  bindisk.html  contact.html  download.html  fosite.html  gallery.html  impressum.html  planet2d.html  shearingsheet.html
doc/html/css/: customdoxygen.css
doc/html/js/: doxy-boot.js
doc/html/special/: footer.html  header.html
examples/: CMakeLists.txt  KHI.f90  KHI2.f90  RMI.f90  TCI.f90  acousticwave.f90  agndisk.f90  betadisk1d.f90  bindisk.f90  bowshock.f90  dmr.f90  forcing-turb.f90  gresho.f90  implosion.f90  kepdisk.f90  keplerianvortex.f90  linearwave.f90  markward.f90  mestel.f90  mmsn.f90  orbitingcylinders.f90  planet2d.f90  planeteu.f90  poiseuille.f90  pringle3d.f90  restart.f90  selfsimdisk1d.f90  sgdisk.f90  shearingbox.f90  shearingsheet.f90  statdisk.f90  ttauridisk.f90  vortex2d_sphere.f90  wind3d.f90
fluxes/: CMakeLists.txt  Makefile.am  fluxes_base.f90  fluxes_generic.f90  fluxes_kt.f90  reconstruction_base.f90  reconstruction_constant.f90  reconstruction_generic.f90  reconstruction_linear.f90
io/: CMakeLists.txt  Makefile.am  fileio_base.f90  fileio_binary.f90  fileio_generic.f90  fileio_gnuplot.f90  fileio_vtk.f90  fileio_xdmf.f90
mesh/: CMakeLists.txt  Makefile.am  geometry_base.f90  geometry_cartesian.f90  geometry_cylindrical.f90  geometry_generic.f90  geometry_logcylindrical.f90  geometry_logspherical.f90  geometry_polar.f90  geometry_spherical.f90  geometry_spherical_planet.f90  geometry_tancylindrical.f90  marray_base.f90  marray_cellscalar.f90  marray_cellvector.f90  marray_compound.f90  mesh_base.f90  mesh_generic.f90  mesh_midpoint.f90
numtools/: CMakeLists.txt  Makefile.am  factors.f90  fftw.f90  functions.f90  integration.f90  rngs.f90  roots.f90  sedov.f90  solutions.f90
physics/: CMakeLists.txt  Makefile.am  constants_SI.f90  constants_base.f90  constants_cgs.f90  constants_generic.f90  constants_geometrical.f90  physics_base.f90  physics_euler.f90  physics_euler2D.f90  physics_euler2Disothm.f90  physics_euler3D.f90  physics_euler3Disothm.f90  physics_eulerisotherm.f90  physics_generic.f90
sources/: CMakeLists.txt  Makefile.am  gravity_base.f90  gravity_binary.f90  gravity_generic.f90  gravity_pointmass.f90  gravity_sboxspectral.f90  gravity_spectral.f90  sources_base.f90  sources_c_accel.f90  sources_cooling.f90  sources_diskcooling.f90  sources_generic.f90  sources_gravity.f90  sources_planetcooling.f90  sources_planetheating.f90  sources_rotframe.f90  sources_shearbox.f90  sources_viscosity.f90
tests/: CMakeLists.txt  KHI2D.f90  KHI2D_sphere.f90  KHI3.f90  KHI3D.f90  Makefile.am  RTI.f90  bondi2d.f90  bondi3d.f90  chemshock1d.f90  collapse.f90  gauss2d.f90  gauss3d.f90  noh2d.f90  noh3d.f90  ode.f90  planet2d.f90  poiseuille.f90  pringle.f90  riemann1d-2d-x.f90  riemann1d-x.f90  riemann1d-y.f90  riemann1d-z.f90  riemann1d.f90  riemann2d-xz.f90  riemann2d.f90  riemann3d.f90  rngtest.f90  rootstest.f90  sblintheo.f90  sblintheo3D.f90  sedov2d.f90  sedov3d.f90  shear.f90  shearingsheet.f90  specialfunctions.f90  vortex2d.f90  vortex2d3d.f90  vortex3d.f90
timedisc/: CMakeLists.txt  Makefile.am  timedisc_base.f90  timedisc_cashkarp.f90  timedisc_dormand_prince.f90  timedisc_generic.f90  timedisc_modeuler.f90  timedisc_rkfehlberg.f90  timedisc_ssprk.f90
tools/: merge_vtk-files.py
tools/plot/: FunctionNorm.py  bin2dat.py  centercmap.py  coplot.py  coroutine.py  read.py  streamplot.py
tools/scripts/: LT_isothermal.py  LT_thermal.py  gauss_legendre.ipynb
